# ChangeLog for dev-perl/MARC-Record
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MARC-Record/ChangeLog,v 1.2 2009/01/17 22:28:55 robbat2 Exp $

  17 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  MARC-Record-2.0.0.ebuild:
  Emerge on an empty system (without perl) failed due to lack of perl dep.

*MARC-Record-2.0.0 (29 Sep 2008)

  29 Sep 2008; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +MARC-Record-2.0.0.ebuild:
  New ebuild by Robin H. Johnson <robbat2@gentoo.org>. Dependancy for
  OpenSRF/Evergreen.
