@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/MARC-Record
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MARC-Record/ChangeLog,v 1.2 2009/01/17 22:28:55 robbat2 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MARC-Record/ChangeLog,v 1.3 2010/05/02 09:54:46 tove Exp $
+
+*MARC-Record-2.0.1 (02 May 2010)
+
+  02 May 2010; Torsten Veller <tove@gentoo.org> +MARC-Record-2.0.1.ebuild:
+  Version bump
 
   17 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
   MARC-Record-2.0.0.ebuild:
